# neuronspikes

./: .gitignore  README.md  pyproject.toml
.git-hooks/: post-commit  prepare-commit-msg
docs/: ARCHITECTURE.md  JOURNAL.md
docs/commits/: 0523d1c.md  087d16b.md  0b904d2.md  0bbfcdd.md  13145f6.md  14dfba4.md  1598de9.md  16f706b.md  175a7a5.md  2163efd.md  2246959.md  27891d3.md  319f37c.md  43f2ae3.md  48395f7.md  4a94719.md  4ae5ec2.md  4ce0e55.md  4d0849d.md  54dc874.md  59663e9.md  61851b3.md  629c2db.md  69569bb.md  6cd3217.md  74226b6.md  7c90f43.md  8720012.md  8e6efb5.md  8e8db1f.md  a6d8288.md  ab8964c.md  b1a4bfc.md  b1f8947.md  b610302.md  b6fce5f.md  c149954.md  c4a7744.md  c805a3a.md  c840e84.md  (+14 more)
docs/journal/: 2026-01-31-session.md
examples/: demo_retina.py  live_retina.py  live_stereo.py  live_stereo_agent.py  minimal_run.py  visualize_3d.py
src/neuronspikes/: __init__.py  attention.py  color_fovea.py  fabric.py  fovea.py  genesis.py  groups.py  lut.py  model.py  opencl_backend.py  optic_chiasm.py  retina.py  retinal_pathways.py  synapses.py  temporal.py  visualizer_3d.py
tests/: test_attention.py  test_color_fovea.py  test_fabric.py  test_fovea.py  test_genesis.py  test_groups.py  test_lut.py  test_neuron_stack.py  test_opencl.py  test_retina.py  test_retinal_pathways.py  test_smoke.py  test_synapses.py  test_temporal.py
